# rust_lambda

./: Cargo.toml  Readme.md  cdk.json  package-lock.json  package.json  tsconfig.json
cdk.out/: manifest.json  rust-lambda-cdk.template.json  tree.json
deploy/: stack.ts
deploy/lib/: lambda-stack.ts
src/: lib.rs
