[package]
name = "rust_lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"
[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[dependencies]
lambda = {package = "netlify_lambda",version = "0.2.0"}
tokio = "1.5.0"
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"
[dev-dependencies]
pretty_assertions = "1.0.0"
